--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             width: auto;
             height: 900px;
         }
+        .video-container {
+            display: inline-block;
+            border-width: 560;
+            border-radius: 8px;
+            border: 15px double #e7339c;
+          /* Change the color and size of the border as needed */
+        /*width: fit-content;*/
+         /*padding: 10px;  Optional: Adds some space between the iframe and the border */
+}
     </style>
 </head>
 <body>
@@ -66,6 +75,10 @@
 
             <p>I know we live far apart and I am really sorry sometimes that i really get busy with my studies and couldn't pay attention to you😔</p>
             <p>Thank you for being my everything<br> Happy Girlfriend's Day!😉</p>
+            <p>This song really expresses my feelings😌</p>
+        </div>
+        <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uI926JKvNa0?si=K94ZeOIR0mDNLgxF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
