--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
         h1 {
             color: #ff6f61;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
             
         }
         .photos img {
@@ -33,6 +34,7 @@
             box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
         }
         .paragraph {
+            
             margin: 20px 0;
             color :#f8f8f8;
             border-radius: 10px;
@@ -57,7 +59,7 @@
 <body>
    
     <div class="container">
-        <h1>Happy Girlfriend's Day!</h1>
+        <h1 >Happy Girlfriend's Day!</h1>
         <div class="photos">
             <img src="p01.jpg" alt="Photo 01">
             <img src="p (5).jpg" alt="Photo 1">
@@ -70,10 +72,14 @@
           <!--  <img src="p (3).jpg" alt="Photo 6">-->
         </div>
         <div class="paragraph">
-            <p style="font-weight: bold; text-decoration: underline;">Dear Meri Pyaari Yoshii🩷,</p>
+            <p style="font-weight: bold; text-decoration: underline; text-shadow: 
+            -1px -1px 0 #000,  
+             1px -1px 0 #000,
+            -1px  1px 0 #000,
+             1px  1px 0 #000;">Dear Meri Pyaari Yoshii🩷,</p>
             <p style="text-shadow: 2px 2px #131313;">Since you came into my life, everything has been brighter and more beautiful✨. Your love and support mean the world to me, and I feel incredibly lucky to have you by my side.😌<br> </p>
 
-            <p>I know we live far apart and I am really sorry sometimes that i really get busy with my studies and couldn't pay attention to you😔</p>
+            <p style="box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);">I know we live far apart and I am really sorry sometimes that i really get busy with my studies and couldn't pay attention to you😔</p>
             <p>Thank you for being my everything<br> Happy Girlfriend's Day!😉</p>
             <p>This song really expresses my feelings😌</p>
         </div>
