--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Girlfriend's Day!</title>
+    <title>Happy Birth Day!</title>
     <style>
         body {
             background-image: url('r.jpg');
@@ -59,7 +59,7 @@
 <body>
    
     <div class="container">
-        <h1 >Happy Girlfriend's Day!</h1>
+        <h1 >Happy Birthday Day Mahi</h1>
         <div class="photos">
             <img src="p01.jpg" alt="Photo 01">
             <img src="p (5).jpg" alt="Photo 1">
@@ -76,7 +76,7 @@
             -1px -1px 0 #000,  
              1px -1px 0 #000,
             -1px  1px 0 #000,
-             1px  1px 0 #000;">Dear Meri Pyaari Yoshii🩷,</p>
+             1px  1px 0 #000;">Dear Madam Ji,</p>
             <p style="text-shadow: 2px 2px #131313;">Since you came into my life, everything has been brighter and more beautiful✨. Your love and support mean the world to me, and I feel incredibly lucky to have you by my side.😌<br> </p>
 
             <p style="box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);">I know we live far apart and I am really sorry sometimes that i really get busy with my studies and couldn't pay attention to you😔</p>
