--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         // Random Image Logic
         const photos = [
-             "p (3).jpg", "p (2).jpg", "p (1).jpg"
+             "p (3).jpg", "p (1).jpg"
         ];
         const randomIndex = Math.floor(Math.random() * photos.length);
         document.getElementById("random-photo").src = photos[randomIndex];
